# doc/api.yaml
@@ -61,17 +61,17 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
-                Text:
+                text:
                   type: string
                   example: Test
                   pattern: 'ˆ.*?$'
@@ -155,21 +155,21 @@ paths:
                   example: Maria
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
-                NewUsername:
+                newUsername:
                   type: string
                   pattern: 'ˆ.*?$'
                   example: Maria
                   minLength: 3
                   maxLength: 16
-                Name:
+                name:
                   type: string
                   example: Mario
                   pattern: 'ˆ.*?$'
-                Surname:
+                surname:
                   type: string
                   example: Rossi
                   pattern: 'ˆ.*?$'
@@ -186,9 +186,9 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
   
   /profile/{id}:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
     get:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["UserProfile"]
       operationId: getUserProfile
       summary: Get user profile by id
@@ -205,8 +205,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     post:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["UserProfile"]
       operationId: followUser
       summary: Follow user by id
@@ -220,13 +218,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -243,8 +241,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["UserProfile"]
       operationId: unfollowUser
       summary: Unfollow user by id
@@ -258,13 +254,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -282,9 +278,9 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
 
   /profile/{id}/ban:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
     post:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["BanProfile"]
       operationId: banUser
       summary: Ban user by id
@@ -298,13 +294,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -321,8 +317,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["BanProfile"]
       operationId: unbanUser
       summary: unBan user by id
@@ -336,13 +330,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -360,10 +354,10 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
 
   /profile/{id}/{imageId}:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
+      - $ref: "#components/parameters/ImageIdParam"
     get:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImage"]
       operationId: imageProfile
       summary: Get user image by id
@@ -380,9 +374,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImage"]
       operationId: deletePhoto
       summary: Delete image
@@ -400,13 +391,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -425,10 +416,10 @@ paths:
 
 
   /profile/{id}/{imageId}/like:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
+      - $ref: "#components/parameters/ImageIdParam"
     post:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImageLike"]
       operationId: likePhoto
       summary: Add Like
@@ -442,13 +433,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -465,9 +456,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImageLike"]
       operationId: unlikePhoto
       summary: Delete Like
@@ -481,13 +469,13 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
@@ -508,10 +496,10 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
 
   /profile/{id}/{imageId}/comment:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
+      - $ref: "#components/parameters/ImageIdParam"
     post:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImageComment"]
       operationId: commentPhoto
       summary: Add Comment
@@ -525,17 +513,17 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
-                Content:
+                content:
                   type: string
                   pattern: 'ˆ.*?$'
                   example: Comment
@@ -554,9 +542,6 @@ paths:
         "404": { $ref: "#/components/responses/NotFound" }
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
-        - $ref: "#components/parameters/ImageIdParam"
       tags: ["profileImageComment"]
       operationId: uncommentPhoto
       summary: Delete Comment
@@ -570,17 +555,17 @@ paths:
             schema:
               type: object
               properties:
-                Username:
+                username:
                   type: string
                   example: Maria
                   pattern: 'ˆ.*?$'
                   minLength: 3
                   maxLength: 16
-                Id:
+                id:
                   type: string
                   example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
                   pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
-                Index:
+                index:
                   type: integer
                   minimum: 0
         required: true
@@ -599,9 +584,9 @@ paths:
 #  /profile/{id}/ultra:
 
   /profile/{id}/followers:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
     get:
-      parameters:
-        - $ref: "#components/parameters/IdParam"
       tags: ["UserProfile"]
       operationId: followersProfile
       summary: Get user followers by id
@@ -643,9 +628,9 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
 
   /search:
+    parameters:
+      - $ref: "#components/parameters/IdParam"
     get:
-      parameters:
-        - $ref: "#components/parameters/Search"
       tags: ["searchProfile"]
       operationId: searchProfile
       summary: Search fo User
@@ -839,6 +824,10 @@ components:
           type: string
           example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
           pattern: '^[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}$'
+        ProfilePictureLocation:
+          type: string
+          example: /images/a35f6dfa-69dc-11ed-a1eb-0242ac120002.png
+          pattern: '^/images/[0-9a-fA-F]{8}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{4}\b-[0-9a-fA-F]{12}.png$'
         ImageId:
           type: string
           example: a35f6dfa-69dc-11ed-a1eb-0242ac120002
